[package]
name = "thread-safe-cache"
version = "0.1.3"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/thread-safe-cache"
license = "MIT"
license-file = "LICENSE"
keywords = ["cache"]
categories = ["library"]
readme = "README.md"
description = "Thread safe memory key value cache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
