[package]
name = "thread-safe-cache"
version = "0.3.2"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/thread-safe-cache"
license = "MIT"
license-file = "LICENSE"
keywords = ["cache"]
categories = ["library"]
readme = "README.md"
description = "Thread safe memory key value cache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
serde_derive = "1.0.152"
bincode = "1.3.3"
